Fixed some front-end issues on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,15 +31,21 @@ canvas {
 	text-align: center;
 	display: none;
 	h1 {
-		margin-top: 80px;
+		margin-top: 50px;
 		font-size: 4em;
+		@media (min-width: 480px) {
+			margin-top: 80px;
+		}
 	}
 	h4 {
 		font-size: 1.3em;
 		margin-top: 20px;
 	}
 	form {
-		margin-top: 100px;
+		margin-top: 80px;
+		@media (min-width: 480px) {
+			margin-top: 100px;
+		}
 		input {
 			background: rgba(0, 0, 0, 0.2);
 			border: none;
@@ -57,7 +63,7 @@ canvas {
 	}
 }
 
-#info-button {
+#footer-button {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -66,11 +72,34 @@ canvas {
 		border: none;
 		margin: 0 0 20px 20px;
 		span {
-
 			font-size: 1.2em;
 			color: rgba(0, 0, 0, 0.5);
 		}
 	}
+	.loading-spinner {
+		width: 25px;
+		height: 25px;
+		border-radius: 50%;
+		border: 3px dashed rgba(0, 0, 0, 0.7);
+		margin: 0 auto;
+		float: right;
+		left: -50%;
+		display: none;
+		transform: translate(50%, 0);
+		position: relative;
+		animation-name: spinner;
+		animation-duration: 1s;
+		animation-iteration-count: infinite;
+		animation-timing-function: linear;
+	}
 }
 
+@keyframes spinner {
+	0% {
+  	  transform: translate(50%, 0) rotate(0deg);
+ 	 }
+	100% {
+   	 transform: translate(50%, 0) rotate(360deg);
+	}
+}
 
